# BPLog-Python

./: .gitignore  README.md  pyproject.toml
bplog/: __main__.py  app.py  auth.py  config.py  db.py  exporters.py  images.py  models.py  reminders.py  repository.py  settings.py  vision.py
bplog/routes/: exports.py  readings.py  settings_ui.py  vision.py
bplog/static/: app.js  style.css
bplog/templates/: base.html  index.html  settings.html
tests/: conftest.py  test_auth.py  test_config_db.py  test_entrypoint.py  test_exporters.py  test_reminders.py  test_repository.py  test_routes.py  test_settings.py  test_vision.py
